--- a/assets/pages/style.css
+++ b/assets/pages/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-* :not(hr,del) {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -11,15 +11,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-}
-
-.content {
-    display: flex;
-    margin: 82px auto 32px;
-    max-width: auto;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
 }
 
 .container {
@@ -43,7 +34,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:white;
+    background-color: white;
 }
 
 header .navbar a {
